Fixed spacing on tv view

--- a/src/org/team4977/musicboxouya/www/resources/css/index.css
+++ b/src/org/team4977/musicboxouya/www/resources/css/index.css
@@ -1,3 +1,5 @@
+body { padding-top: 50px; }
+
 .playing {
   margin-bottom:50px;
 }
