--- a/src/org/team4977/musicboxouya/www/resources/css/library.css
+++ b/src/org/team4977/musicboxouya/www/resources/css/library.css
@@ -1,3 +1,1 @@
-.ul-margin-bottom{
-  margin-bottom:25px;
-}
+body { padding-top: 50px; }
