--- a/src/org/team4977/musicboxouya/www/resources/css/main.css
+++ b/src/org/team4977/musicboxouya/www/resources/css/main.css
@@ -1,5 +1,3 @@
-body { padding-top: 50px; }
-
 .sect {
   margin-top:40px;
 }
